[tool.poetry]
name = "diagrams_exporters"
version = "0.1.0"
description = "export the metadata from existing tools, and generate the diagrams"
authors = ["Anddd7 <anddd7@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams-patterns = {path = "../diagrams-patterns/dist/diagrams_patterns-0.1.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
