[tool.poetry]
name = "diagrams_exporters"
version = "0.1.0-alpha1"
description = "export the metadata from existing tools, and generate the diagrams"
authors = ["Anddd7 <anddd7@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydot = "^1.4.2"
diagrams-patterns = "^0.1.0a1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
